# whatsapp_diary

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
app/: main.py
app/services/: db.py  importer.py  parser.py
static/: index.html
tests/: test_parser.py
