[project]
name = "whatsapp-diary"
version = "0.1.0"
description = "Import WhatsApp chat exports and ask questions locally via a small web UI"
requires-python = ">=3.10"
readme = "README.md"
authors = [{ name = "You" }]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.8.2",
    "SQLAlchemy>=2.0.32",
    "alembic>=1.13.2",
    "jinja2>=3.1.4",
    "httpx>=0.27.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.2",
]


